--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -148,4 +148,6 @@
     <string name="multibancoEntity">Entity</string>
     <string name="multibancoReference">Reference</string>
     <string name="multibancoAmount">Amount</string>
+    <string name="card_name_on_card">Name on card</string>
+    <string name="save_this_card">Save this card</string>
 </resources>
