--- a/primer-sdk-android/src/main/res/values/strings.xml
+++ b/primer-sdk-android/src/main/res/values/strings.xml
@@ -150,4 +150,5 @@
     <string name="multibancoAmount">Amount</string>
     <string name="card_name_on_card">Name on card</string>
     <string name="save_this_card">Save this card</string>
+    <string name="card_expiry_formatted">Expiry (MM/YY)</string>
 </resources>
